sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__composite-index-range-on-second.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, order_date, total_amount
      FROM orders
      WHERE customer_id = 100 AND order_date >= '2024-01-01' AND order_date < '2024-02-01';
info:
  statement_type: SELECT
  tables:
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH orders USING INDEX idx_orders_customer_date (customer_id=? AND order_date>=? AND order_date<?)
