sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__composite-index-second-column-only.snap
---
source: indexes.sqltest
expression: |-
  SELECT id, customer_id, total_amount
      FROM orders
      WHERE order_date = '2024-01-15';
info:
  statement_type: SELECT
  tables:
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN orders
