sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__covering-index-all-columns.snap
---
source: indexes.sqltest
expression: |-
  SELECT warehouse_id, product_id, quantity
      FROM inventory
      WHERE warehouse_id = 1 AND product_id = 500;
info:
  statement_type: SELECT
  tables:
  - inventory
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH inventory USING COVERING INDEX idx_inventory_covering (warehouse_id=? AND product_id=?)
