sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__full-scan-function-on-indexed.snap
---
source: indexes.sqltest
expression: SELECT id, sku, name FROM products WHERE UPPER(sku) = 'ABC123';
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products
