sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__full-scan-leading-wildcard.snap
---
source: indexes.sqltest
expression: SELECT id, sku, name FROM products WHERE sku LIKE '%123';
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products
