sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__full-scan-no-index.snap
---
source: indexes.sqltest
expression: SELECT id, level, message FROM logs WHERE level = 'ERROR';
info:
  statement_type: SELECT
  tables:
  - logs
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN logs
